ccmat-macros/tests/ui/matrix_3x3_frac_error.stderr
error: integer division detected; Rust performs integer division here, but this macro expects floats.
       Write `1.0 / 2.0` instead of `1 / 2`.
 --> tests/ui/matrix_3x3_frac_error.rs:5:9
  |
5 |         2/4 2 3;
  |         ^
